Basic keyboard setup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnimaleseTyping">
-        <activity
-            android:name=".SettingsActivity"
-            android:exported="true"
-            android:label="@string/ime_settings_name"
-            android:theme="@style/Theme.AnimaleseTyping">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <service
             android:name=".IMEService"
             android:exported="true"
@@ -34,6 +24,13 @@
                 android:name="android.view.im"
                 android:resource="@xml/method" />
         </service>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/ime_settings_name" >
+        </activity>
+
     </application>
 
 </manifest>
